add CTA section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           </table>
           <!-- //Pre-header Table -->
 
+          <!-- Hero Section Table -->
           <table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FFFFFF">
             <tr>
                 <td align="center" valign="top" height="10" style="font-size:10px; line-height:10px;">
@@ -120,8 +121,9 @@
                 <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
             </tr>
           </table>
+          <!-- //Hero Section Table -->
 
-
+          <!-- Hero CTA Table -->
           <table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FFFFFF">
                 <tr>
                  <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
@@ -140,7 +142,7 @@
                                 <tr>
                                 <td>
             
-                                    <table border="0" cellspacing="0" cellpadding="0" style="margin: 0px auto; text-align: center;">
+                                    <table border="0" cellspacing="0" cellpadding="0" style="margin: 10px auto; text-align: center;">
                                     <tr>
                                         <td>
                                         <a class="btn-yellow" href="https://www.nike.com/launch/t/air-force-1-kay-yow/" target="_blank" style="color: #ffffff; text-decoration: none; background-color: #111; padding: 12px 20px; display: inline-block; font-weight: bold; border-radius: 2px;">
@@ -153,7 +155,7 @@
                                 </td>
                                 </tr>
                             </table>
-                            <!-- End of Hero Button -->
+                            <!-- //Hero Button -->
 
                           </td>
                           
@@ -166,6 +168,7 @@
                   <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
                 </tr>
               </table>
+              <!-- //Hero CTA Table -->
 
 
 
@@ -178,14 +181,11 @@
 
                 <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
                   <tr>
-                      <td width="200" class="mobile" align="center" valign="top">
-                        Grid Three
+                      <td width="300" class="mobile" align="center" valign="top">
+                        Grid Two
                       </td>
-                      <td width="200" class="mobile" align="center" valign="top">
-                        Grid Three
-                      </td>
-                      <td width="200" class="mobile" align="center" valign="top">
-                        Grid Three
+                      <td width="300" class="mobile" align="center" valign="top">
+                        Grid Two
                       </td>
                   </tr>
                 </table>
