remove bars for push

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style type="text/css">
     
     /* Outlines the grids, remove when sending */
-    table td { border: 1px solid cyan; }
+    /*table td { border: 1px solid cyan; }*/
 
     /* CLIENT-SPECIFIC STYLES */
     body, table, td, a { -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
